--- a/package.json
+++ b/package.json
@@ -2,15 +2,54 @@
   "name": "apfood",
   "version": "1.0.0",
   "main": "index.js",
+  "private": true,
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "expo start",
+    "android": "expo start --android",
+    "ios": "expo start --ios",
+    "web": "expo start --web",
+    "test": "jest"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
   "dependencies": {
-    "expo": "^53.0.19",
-    "express": "^5.1.0"
+    "@react-native-async-storage/async-storage": "2.2.0",
+    "@react-navigation/native": "^6.1.9",
+    "@react-navigation/native-stack": "^6.9.12",
+    "@react-navigation/stack": "^6.3.20",
+    "expo": "54.0.6",
+    "expo-barcode-scanner": "^13.0.1",
+    "expo-file-system": "~19.0.14",
+    "expo-haptics": "~15.0.7",
+    "expo-sharing": "~14.0.7",
+    "expo-status-bar": "~3.0.8",
+    "lottie-react-native": "~7.3.1",
+    "react": "19.1.0",
+    "react-native": "0.81.4",
+    "react-native-chart-kit": "^6.12.0",
+    "react-native-gesture-handler": "~2.28.0",
+    "react-native-reanimated": "~4.1.0",
+    "react-native-safe-area-context": "~5.6.0",
+    "react-native-screens": "~4.16.0",
+    "react-native-svg": "15.12.1",
+    "react-native-worklets": "0.5.1",
+    "expo-camera": "~17.0.7"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.28.4",
+    "babel-preset-expo": "^54.0.0",
+    "jest": "^29.7.0",
+    "jest-expo": "~54.0.11",
+    "react-native-svg-transformer": "^1.5.1"
+  },
+  "jest": {
+    "preset": "jest-expo",
+    "testEnvironment": "node",
+    "setupFiles": [
+      "@react-native-async-storage/async-storage/jest/async-storage-mock"
+    ],
+    "transformIgnorePatterns": [
+      "node_modules/(?!(react-native|@react-native|react-native-svg|expo(nent)?|@expo(nent)?/.*|expo-modules-core|@unimodules/.*|unimodules-.*|react-native-reanimated)/)"
+    ]
   }
 }
+
